tests/fsharp/typecheck/sigs/neg41.bsl

neg41.fs(3,1,3,5): parse error FS0010: Unexpected start of structured construct in definition. Expected '=' or other token.

neg41.fs(4,1,4,1): parse error FS0010: Incomplete structured construct at or before this point in implementation file
